--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://immense-badlands-87877.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
